--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "face-api.js": "^0.22.2",
     "fs": "^0.0.1-security",
     "mongoose": "^5.12.13",
+    "multer": "^1.4.5-lts.1",
     "package.json": "^2.0.1",
     "path": "^0.12.7"
   }
