--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.1.0",
     "@vladmandic/face-api": "^1.7.7",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "canvas": "^2.8.0",
     "connect-flash": "^0.1.1",
